<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_lifecycle</name>
  <version>0.7.16</version>
  <description>Package containing a prototype for lifecycle implementation</description>
  <maintainer email="karsten@osrfoundation.org">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcl_lifecycle</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcl_lifecycle</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
