<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_lifecycle</name>
  <version>28.1.6</version>
  <description>Package containing a prototype for lifecycle implementation</description>

  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <maintainer email="william@openrobotics.org">William Woodall</maintainer>

  <license>Apache License 2.0</license>

  <author email="jacob@openrobotics.org">Jacob Perron</author>
  <author email="karsten@openrobotics.org">Karsten Knese</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcl_lifecycle</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rcl_lifecycle</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>mimick_vendor</test_depend>
  <test_depend>performance_test_fixture</test_depend>
  <test_depend>rcpputils</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
