<?xml version="1.0"?>
<package format="2">
  <name>ros_middleware_implementation</name>
  <version>0.0.0</version>
  <description>The decision which ROS middleware implementation should be used for C++.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
</package>
